:memo: :truck: :package: Add docs & move files

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version":2,
     "name": "PimHereRaiNi",
     "version":"1.0",
+    "description": "Decode a message that was forgotten switching between TH/EN keyboard",
     "content_scripts":[
         {
             "matches":[
@@ -14,7 +15,11 @@
         "scripts": ["background.js"]
     },
     "browser_action":{
-        "default_icon":"icons/icon48.png",
+        "default_icon":{
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
+        },
         "default_popup":"popup/popup.html",
         "default_title":"พิมพ์เฮียไรนิ?"
     },
